# gis-ai-assistant

./: .gitignore  pyproject.toml  run_agent.py  run_server.py
agent/: __init__.py  graph.py  state.py  tools.py
rag/: config.py  embedding.py  hybrid_retriever.py  loader.py  pipeline.py  rag_service.py  reranker.py  retriever.py  splitter.py  vectordb.py
server/: config.py  main.py
server/db/: conf.py  crud.py  models.py
server/routes/: chat.py  health.py
server/schemas/: auth.py  chat.py  openai.py
tests/: compare_retrieval.py  test_charoma.py  test_hybrid.py  test_loader.py  test_rag_service.py  test_recall.py  test_rerank.py  test_splitter.py
utils/: auth.py  captcha.py  logger_handle.py  path_tool.py
