[project]
name = "gis-ai-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-mineru>=0.1.3",
    "langgraph>=1.2.6",
    "pymupdf>=1.28.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
