[project]
name = "gis-ai-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "dashscope>=1.26.0",
    "fast-captcha>=0.3.2",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-mineru>=0.1.3",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymupdf>=1.28.0",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "starlette>=1.3.1",
    "tavily>=1.1.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
